--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+logging.level.org.springframework.security=DEBUG
